// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentCard renders DocumentCardImage correctly with a valid image 1`] = `
<div
  className=

      {
        background-color: #faf9f8;
        border-bottom: 1px solid #edebe9;
        height: 100px;
        overflow: hidden;
        position: relative;
      }
>
  <div
    className=
        ms-Image
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          overflow: hidden;
          position: relative;
        }
    style={
      Object {
        "height": 100,
        "width": undefined,
      }
    }
  >
    <img
      alt=""
      className=
          ms-Image-image
          ms-Image-image--cover
          ms-Image-image--portrait
          is-notLoaded
          is-fadeIn
          {
            display: block;
            height: 100%;
            object-fit: cover;
            opacity: 0;
            width: 100%;
          }
      onError={[Function]}
      onLoad={[Function]}
      role="presentation"
      src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/document-preview2.png"
    />
  </div>
  <div
    className=

        {
          align-items: center;
          display: flex;
          height: 100%;
          justify-content: center;
          left: 0px;
          position: absolute;
          top: 0px;
          width: 100%;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #813a7c;
            display: inline-block;
            font-family: "FabricMDL2Icons-9";
            font-size: 42px;
            font-style: normal;
            font-weight: normal;
            height: 42px;
            speak: none;
            width: 42px;
          }
      data-icon-name="OneNoteLogo"
    >
      
    </i>
  </div>
</div>
`;

exports[`DocumentCard renders DocumentCardImage correctly with an invalid image 1`] = `
<div
  className=

      {
        background-color: #faf9f8;
        border-bottom: 1px solid #edebe9;
        height: 150px;
        overflow: hidden;
        position: relative;
      }
>
  <div
    className=
        ms-Image
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          overflow: hidden;
        }
    style={
      Object {
        "height": 150,
        "width": undefined,
      }
    }
  >
    <img
      alt=""
      className=
          ms-Image-image
          ms-Image-image--portrait
          is-notLoaded
          is-fadeIn
          {
            display: block;
            height: 100%;
            opacity: 0;
            width: auto;
          }
      onError={[Function]}
      onLoad={[Function]}
      role="presentation"
      src="someinvalidurl"
    />
  </div>
  <div
    className=

        {
          align-items: center;
          display: flex;
          height: 100%;
          justify-content: center;
          left: 0px;
          position: absolute;
          top: 0px;
          width: 100%;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #813a7c;
            display: inline-block;
            font-family: "FabricMDL2Icons-9";
            font-size: 120px;
            font-style: normal;
            font-weight: normal;
            height: 120px;
            speak: none;
            width: 120px;
          }
      data-icon-name="OneNoteLogo"
    >
      
    </i>
  </div>
</div>
`;

exports[`DocumentCard renders DocumentCardImage correctly without an image or icon 1`] = `
<div
  className=

      {
        background-color: #faf9f8;
        border-bottom: 1px solid #edebe9;
        height: 100px;
        overflow: hidden;
        position: relative;
      }
>
  <div
    className=

        {
          align-items: center;
          display: flex;
          height: 100%;
          justify-content: center;
          left: 0px;
          position: absolute;
          top: 0px;
          width: 100%;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            display: inline-block;
            font-size: 42px;
            height: 42px;
            width: 42px;
          }
    />
  </div>
</div>
`;

exports[`DocumentCard renders DocumentCardImage correctly without an image provided 1`] = `
<div
  className=

      {
        background-color: #faf9f8;
        border-bottom: 1px solid #edebe9;
        height: 150px;
        overflow: hidden;
        position: relative;
      }
>
  <div
    className=

        {
          align-items: center;
          display: flex;
          height: 100%;
          justify-content: center;
          left: 0px;
          position: absolute;
          top: 0px;
          width: 100%;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #813a7c;
            display: inline-block;
            font-family: "FabricMDL2Icons-9";
            font-size: 120px;
            font-style: normal;
            font-weight: normal;
            height: 120px;
            speak: none;
            width: 120px;
          }
      data-icon-name="OneNoteLogo"
    >
      
    </i>
  </div>
</div>
`;
